display name by community site

--- a/pse-dbmodell/src/main/webapp/protected/Community.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Community.xhtml
@@ -15,7 +15,8 @@
 						<p:outputLabel value="Name"/>
 					</p:column>			
 					<p:column colspan="2">			
-						 <h:outputText value="#{communityProfileController.communityName}" />
+						
+						 <h:outputText value="#{communityProfileController.getSelectedCommunityName()}" />
 					</p:column>			
 				</p:row>
 			</p:panelGrid>
