Display of images in news & messages

--- a/pse-dbmodell/src/main/webapp/protected/Main.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Main.xhtml
@@ -7,7 +7,7 @@
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
 		<div>
-			<a href="#{request.contextPath}/protected/xperimental/AddMessage.jsf">Demonachricht
+			<a href="#{request.contextPath}/protected/xperimental/AddMessage.jsf">Nachricht
 				eingeben</a>
 		</div>
 
@@ -15,29 +15,36 @@
 			<div class="ui-grid-row">
 				<div class="ui-grid-col-12">
 					<p:panel header="News">
-					<p:dataScroller value="#{simpleFeedController.getNews(1)}"
-								var="news" chunkSize="10" mode="inline" scrollHeight="500">
-								<h:panelGrid columns="1" style="width:100%"
-									columnClasses="logo,detail">
-									<p:outputPanel>
-										<h:panelGrid columns="7" cellpadding="5">
-											<h:outputText value="Datum:" />
-											<h:outputText value="#{news.createdAt}"
-												style="font-weight: bold">
-												<f:convertDateTime pattern="dd.MM.yyyy HH:mm" />
-											</h:outputText>
-											<h:commandButton
-												action="#{messageDetailsController.openDetailView}"
-												value="Details" icon="ui-icon-search">
-												<f:param name="messageId" value="#{news.messageId}" />
-											</h:commandButton>
+						<p:dataScroller value="#{simpleFeedController.getNews(1)}"
+							var="news" chunkSize="10" mode="inline" scrollHeight="400">
+							<h:panelGrid columns="1" style="width:100%"
+								columnClasses="logo,detail">
+								<p:outputPanel>
+									<h:panelGrid columns="7" cellpadding="5">
+										<h:outputText value="Datum:" />
+										<h:outputText value="#{news.date}"
+											style="font-weight: bold">
+											<f:convertDateTime pattern="dd.MM.yyyy HH:mm" />
+										</h:outputText>
+										<h:commandButton
+											action="#{messageDetailsController.openDetailView}"
+											value="Details" icon="ui-icon-search">
+											<f:param name="messageId" value="#{news.id}" />
+										</h:commandButton>
+									</h:panelGrid>
+									<h:panelGrid columns="2" cellpadding="5">
+										<p:graphicImage id="newsIcon" styleClass="userimage"
+											value="#{news.imageRef}" cache="false"
+											rendered="#{news.imageRef ne null}" />
+										<h:panelGrid>
+											<h:outputText value="#{news.headline} &lt;br/&gt;"
+												escape="false" style="font-weight: bold" />
+											<h:outputText value="#{news.text}" escape="false" />
 										</h:panelGrid>
-										<h:outputText value="#{news.headline} &lt;br/&gt;"
-											escape="false" style="font-weight: bold" />
-										<h:outputText value="#{news.message}" escape="false" />
-									</p:outputPanel>
-								</h:panelGrid>
-							</p:dataScroller>
+									</h:panelGrid>
+								</p:outputPanel>
+							</h:panelGrid>
+						</p:dataScroller>
 					</p:panel>
 				</div>
 			</div>
@@ -51,7 +58,8 @@
 									columnClasses="logo,detail">
 									<p:outputPanel>
 										<h:panelGrid columns="7" cellpadding="5">
-											<h:outputText value="Community:" rendered="#{!activity.privateMessage}"/>
+											<h:outputText value="Community:"
+												rendered="#{!activity.privateMessage}" />
 											<h:outputLabel
 												value="#{activity.privateMessage ? 'Privat' : 
 												activity.community}"
@@ -70,38 +78,55 @@
 												<f:param name="messageId" value="#{activity.id}" />
 											</h:commandButton>
 										</h:panelGrid>
-										<!-- <p:graphicImage value="#{messageDetailsController.messageDTO.icon}" cache="false" /> -->
-										<h:panelGrid cellpadding="5">
-											<h:outputText value="#{activity.headline}" style="font-weight: bold" />
-											<h:outputText value="#{activity.text}" escape="false" />
+										<h:panelGrid columns="2" cellpadding="5">
+											<p:graphicImage id="messageIcon" styleClass="userimage"
+											value="#{activity.imageRef}"
+											cache="false"
+											rendered="#{activity.imageRef ne null}" />
+											<h:panelGrid>
+												<h:outputText value="#{activity.headline}"
+													style="font-weight: bold" />
+												<h:outputText value="#{activity.text}" escape="false" />
+											</h:panelGrid>
 										</h:panelGrid>
-										<h:panelGrid columns="4" style="margin-top: 10px" >
-											<h:commandButton action="#{simpleFeedController.rateMessage}" value="Like" immediate="true" 
-												rendered="#{!activity.like}" styleClass="likebutton">
+										<h:panelGrid columns="4" style="margin-top: 10px">
+											<h:commandButton action="#{simpleFeedController.rateMessage}"
+												value="Like" immediate="true" rendered="#{!activity.like}"
+												styleClass="likebutton">
 												<f:param name="messageId" value="#{activity.id}" />
 											</h:commandButton>
-											<h:commandButton action="#{simpleFeedController.removeRating}" value="Like zurücknehmen" immediate="true"
+											<h:commandButton
+												action="#{simpleFeedController.removeRating}"
+												value="Like zurücknehmen" immediate="true"
 												rendered="#{activity.like}" styleClass="likebutton">
 												<f:param name="messageId" value="#{activity.id}" />
 											</h:commandButton>
 											<h:outputText value="#{activity.quantityRatings} " />
-											<p:commandLink id="fadePersons" oncomplete="PF('dlg1').show();" update="dial"
+											<p:commandLink id="fadePersons"
+												oncomplete="PF('dlg1').show();" update="dial"
 												rendered="#{not empty activity.ratingPersonsList}">
 												<h:outputText value="User gefällt das!" />
 											</p:commandLink>
-											<p:tooltip id="toolTipFade" for="fadePersons" value="#{activity.ratingPersonsList}">
-												<f:converter converterId="at.fhj.swd13.pse.controller.converter.RatingPersonsListConverter"/>
+											<p:tooltip id="toolTipFade" for="fadePersons"
+												value="#{activity.ratingPersonsList}">
+												<f:converter
+													converterId="at.fhj.swd13.pse.controller.converter.RatingPersonsListConverter" />
 											</p:tooltip>
-											<h:outputText value="User gefällt das!" 
-												rendered="#{empty activity.ratingPersonsList}"/>
-											
-											<p:dialog id="dial" header="User" widgetVar="dlg1" minHeight="40" dynamic="true">
-												<p:dataScroller id="ratingScroller" value="#{activity.ratingPersonsList}" var="person" 
-													chunkSize="10" mode="inline" scrollHeight="200" dynamic="true">
-													
+											<h:outputText value="User gefällt das!"
+												rendered="#{empty activity.ratingPersonsList}" />
+
+											<p:dialog id="dial" header="User" widgetVar="dlg1"
+												minHeight="40" dynamic="true">
+												<p:dataScroller id="ratingScroller"
+													value="#{activity.ratingPersonsList}" var="person"
+													chunkSize="10" mode="inline" scrollHeight="200"
+													dynamic="true">
+
 													<h:panelGrid columns="1" style="width:200px">
-														<h:outputLink  value="#{request.contextPath}/protected/User.jsf">
-															<h:outputText value="#{person.fullName}"  style="font-weight: bold"/>
+														<h:outputLink
+															value="#{request.contextPath}/protected/User.jsf">
+															<h:outputText value="#{person.fullName}"
+																style="font-weight: bold" />
 															<f:param name="userName" value="#{person.userName}" />
 															<f:param name="mode" value="view" />
 														</h:outputLink>
@@ -116,8 +141,8 @@
 					</h:form>
 				</div>
 				<div class="ui-grid-col-5">
-						<ui:include src="DocumentLibrary.xhtml">
-						</ui:include>
+					<ui:include src="DocumentLibrary.xhtml">
+					</ui:include>
 				</div>
 			</div>
 		</div>
