Tests fixed, layout improvements

--- a/pse-dbmodell/src/main/webapp/protected/MessageDetails.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/MessageDetails.xhtml
@@ -29,51 +29,52 @@
 						<h:outputText
 							value="#{messageDetailsController.messageDTO.community}" />
 					</p:row>
-					<p:row>
-						<h:outputText
-							value="#{messageDetailsController.messageDTO.headline}"
-							style="font-weight: bold" />
-					</p:row>
-					<p:row>
-						<h:outputText value="#{messageDetailsController.messageDTO.text}"
-							escape="false" />
-					</p:row>
-					<p:row>
+					<h:panelGrid columns="2">
 						<p:graphicImage id="messageIcon" styleClass="userimage"
 							value="#{messageDetailsController.messageDTO.imageRef}"
 							cache="false"
 							rendered="#{messageDetailsController.messageDTO.imageRef ne null}" />
-					</p:row>
+						<p:outputPanel styleClass="detailView-message">
+							<h:panelGrid columns="1">
+								<h:outputText
+									value="#{messageDetailsController.messageDTO.headline}"
+									style="font-weight: bold" />
+								<h:outputText
+									value="#{messageDetailsController.messageDTO.text}"
+									escape="false" />
+							</h:panelGrid>
+						</p:outputPanel>
+					</h:panelGrid>
 				</h:panelGrid>
 				<f:facet name="footer">
 					<h:commandButton
-					action="#{messageDetailsController.rateMessageDetailedView}"
-					value="Like" immediate="true" styleClass="likebutton"
-					rendered="#{!messageDetailsController.messageDTO.like}">
-					<f:param name="messageId"
-						value="#{messageDetailsController.messageDTO.id}" />
-				</h:commandButton>
-				<h:commandButton
-					action="#{messageDetailsController.removeRatingDetailedView}"
-					value="Like zurücknehmen" immediate="true" styleClass="likebutton"
-					rendered="#{messageDetailsController.messageDTO.like}">
-					<f:param name="messageId"
-						value="#{messageDetailsController.messageDTO.id}" />
-				</h:commandButton>
-				<h:outputText
-					value="#{messageDetailsController.messageDTO.quantityRatings} " />
-				<h:outputLink id="fadePersons"
-					onclick="PF('dlg1').show(); return false;"
-					rendered="#{not empty messageDetailsController.messageDTO.ratingPersonsList}">
-					<h:outputText value="User gefällt das!" />
-				</h:outputLink>
-				<p:tooltip id="toolTipFade" for="fadePersons"
-					value="#{messageDetailsController.messageDTO.ratingPersonsList}">
-					<f:converter
-						converterId="at.fhj.swd13.pse.controller.converter.RatingPersonsListConverter" />
-				</p:tooltip>
-				<h:outputText value="User gefällt das!"
-					rendered="#{empty messageDetailsController.messageDTO.ratingPersonsList}" />
+						action="#{messageDetailsController.rateMessageDetailedView}"
+						value="Like" immediate="true" styleClass="likebutton"
+						rendered="#{!messageDetailsController.messageDTO.like}">
+						<f:param name="messageId"
+							value="#{messageDetailsController.messageDTO.id}" />
+					</h:commandButton>
+					<h:commandButton
+						action="#{messageDetailsController.removeRatingDetailedView}"
+						value="Like zurücknehmen" immediate="true" styleClass="likebutton"
+						rendered="#{messageDetailsController.messageDTO.like}">
+						<f:param name="messageId"
+							value="#{messageDetailsController.messageDTO.id}" />
+					</h:commandButton>
+					<h:outputText
+						value="#{messageDetailsController.messageDTO.quantityRatings} " />
+					<h:outputLink id="fadePersons"
+						onclick="PF('dlg1').show(); return false;"
+						rendered="#{not empty messageDetailsController.messageDTO.ratingPersonsList}">
+						<h:outputText value="User gefällt das!" />
+					</h:outputLink>
+					<p:tooltip id="toolTipFade" for="fadePersons"
+						value="#{messageDetailsController.messageDTO.ratingPersonsList}">
+						<f:converter
+							converterId="at.fhj.swd13.pse.controller.converter.RatingPersonsListConverter" />
+					</p:tooltip>
+					<h:outputText value="User gefällt das!"
+						rendered="#{empty messageDetailsController.messageDTO.ratingPersonsList}" />
 				</f:facet>
 			</p:panel>
 		</h:form>
