--- a/pse-dbmodell/src/main/webapp/protected/Communities.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Communities.xhtml
@@ -19,11 +19,11 @@
                	selectionMode="single" selection="#{communityController.selectedCommunity}" 
                	rowKey="#{community.communityId}"
 			>
-			<p:ajax event="rowSelect" listener="#{communityController.onCommunitySelected}" ></p:ajax>
+			<p:ajax event="rowSelect" listener="#{communityController.onCommunitySelected}" onclick="PF('dlg1').show();"></p:ajax>
 			    <p:column headerText="Community Name">
 			        <h:outputText value="#{community.name}" />
 			    </p:column>
-			    <p:column headerText="isPrivate">
+			    <p:column headerText="is private">
 			    	<ui:fragment rendered="#{community.invitationOnly == false}">
 			    		<h:outputText value="#{communityController.getAnswerno()}" />
 			    	</ui:fragment>
@@ -34,24 +34,28 @@
 			    <p:column headerText="Action">
 			     	<ui:fragment rendered="#{community.invitationOnly == false}">
 						<p:commandLink update="communities" actionListener="#{communityController.subscribeCommunity}">	
-			     			<p:commandButton value="add_Community" id="addCommunity" disabled="#{communityController.isMemberOfCommunity(community.communityId)}" />
+			     			<p:commandButton value="Add community" id="addCommunity" disabled="#{communityController.isMemberOfCommunity(community.communityId)}" />
 			     			<f:param name="communityId" value="#{community.communityId}" />
 			     			<f:param name="invitationOnly" value="#{community.invitationOnly}" />
 			     		</p:commandLink>
 			     	</ui:fragment>
 					<ui:fragment rendered="#{community.invitationOnly == true}">
 						<p:commandLink actionListener="#{communityController.subscribeCommunity}">	
-			     			<p:commandButton value="ask_Commuity" id="askCommunity" disabled="#{communityController.isMemberOfCommunity(community.communityId)}" />
+			     			<p:commandButton value="Ask community" id="askCommunity" disabled="#{communityController.isMemberOfCommunity(community.communityId)}" />
 			     			<f:param name="communityId" value="#{community.communityId}" />
 			     			<f:param name="invitationOnly" value="#{community.invitationOnly}" />
 			     			<f:param name="privateUser" value="#{community.privateUser}" />
 			     		</p:commandLink>
 			     	</ui:fragment>				
 			    </p:column>
-			    <p:column headerText="isMember">
+			    <p:column headerText="is member">
 			    	<h:outputText value="#{communityController.isMemberToString(community.communityId)}" />
 			    </p:column>
+			    <p:dialog header="Basic Dialog" widgetVar="dlg1" minHeight="40">
+    <h:outputText value="Resistance to PrimeFaces is futile!" />
+</p:dialog>
 			</p:dataTable>
+			
 		</h:form>
 	</ui:define>
 </ui:composition>
